fixed responsiveness on mobile devices

--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@ body{
     align-items: center;
     padding:50px 30px;
     border-radius: 10px;
-    margin-top: 50px;
+    margin-top: 5px;
     margin-bottom: 0px;
     width: 95%;
     -moz-box-shadow: 0 0 10px black;
@@ -67,7 +67,7 @@ body{
 .results-container {
     display: block;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 5px;
     padding:30px 30px;
     border-radius: 10px;
     width: 95%;
@@ -89,10 +89,11 @@ body{
 @media(min-width:600px){
     .main-container{
         width:600px;
+        margin-top: 50px;
     }
     .results-container{
         width:600px;
-        margin-top: 5px;
+        margin-top: 30px;
     }
     .lyrics-container{
         height:300px;
